[gd_scene load_steps=3 format=3 uid="uid://bmxqdxl6sl5hq"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_rhd3y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60bar"]
bg_color = Color(0, 0.461515, 0.333625, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_rhd3y")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Lives: 3"

[node name="GameOverContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_60bar")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "YOU HAVE LOST"

[node name="RestartButton" type="Button" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART GAME"

[node name="LevelUpContainer" type="CenterContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelUpContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_60bar")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUpContainer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -29.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LevelUpContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "LEVEL UP"

[node name="LevelUpButton" type="Button" parent="LevelUpContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "START NEXT LEVEL"

[connection signal="pressed" from="GameOverContainer/Panel/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="LevelUpContainer/Panel/VBoxContainer/LevelUpButton" to="." method="_on_level_up_button_pressed"]
